Switch to Java 11 as a target compiled version.